--- a/frontend/src/components/TeamMembers/TeamMembers.css
+++ b/frontend/src/components/TeamMembers/TeamMembers.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   width: 93vw;
   z-index: 1;
+  position: relative;
 }
 .team-member-image {
   text-align: center;
@@ -40,4 +41,45 @@
   height: 20px;
   cursor: pointer;
   font-size: 14px;
+}
+.delete-modal {
+  width: 500px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  padding: 20px;
+  position: absolute;
+  top: 250%;
+  right: -15%;
+  transform: translate(-50%, -50%);
+  background-color: #f8fbfe;
+  border-radius: 5px;
+  box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.25);
+  font-family: "Inter";
+}
+.delete-modal-btns {
+  display: flex;
+  gap: 20px;
+  justify-content: right;
+  margin-top: 40px;
+}
+.cancel-btn {
+  width: 150px;
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 30px;
+  background-color: #ffffff;
+  color: rgb(137, 137, 137);
+  border: none;
+}
+.confirm-btn {
+  width: 150px;
+
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 30px;
+  background-color: #184e7f;
+  border: 1px solid white;
+  color: white;
 }
