--- a/frontend/src/components/TeamMembers/TeamMembers.css
+++ b/frontend/src/components/TeamMembers/TeamMembers.css
@@ -25,7 +25,12 @@
   text-overflow: clip;
   word-wrap: break-word;
 }
+.team-member-headings.email {
+  width: 300px;
+}
 .team-member-actions {
+  width: 300px;
+  height: 20px;
   display: flex;
   gap: 20px;
   margin-right: 24px;
@@ -33,7 +38,16 @@
   justify-content: center;
   border-bottom: 1px solid #eaeaea;
   padding: 10px;
-  margin-top: 14px;
+  margin-top: 34px;
+}
+.actions {
+  display: flex;
+  gap: 20px;
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: flex-end;
+  margin-bottom: 30px;
 }
 .edit-btn,
 .dlt-btn {
@@ -54,7 +68,7 @@
   right: -15%;
   transform: translate(-50%, -50%);
   background-color: #f8fbfe;
-  border-radius: 5px;
+  border-radius: 30px;
   box-shadow: 0px 0px 14px rgba(0, 0, 0, 0.25);
   font-family: "Inter";
 }
