testing chatbox changed

--- a/testclient/src/components/Chatbox/ChatBox.css
+++ b/testclient/src/components/Chatbox/ChatBox.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 .chat-box {
   background-color: white;
   margin: 0 auto;
@@ -87,7 +88,7 @@
   font-size: 11px;
   display: flex;
   width: 231px;
-  height: 48px;
+  height: 45px;
   gap: 10px;
   justify-content: center;
   flex-direction: column;
@@ -99,7 +100,7 @@
   display: flex;
   align-self: flex-end;
   margin-left: auto;
-  margin-right: 10px;
+  margin-right: 5px;
   padding-top: 10px;
   padding-bottom: 10px;
   padding-left: 10px;
@@ -110,6 +111,7 @@
   height: 256px;
   flex-direction: column;
   gap: 5px;
+  margin-top: 20px;
 }
 .introduction {
   background-color: white;
